# otus_patterns

./: README.md
.github/workflows/: ci-cmake_hw1_tests.yml
homework1/: CMakeLists.txt
homework1/src/: CMakeLists.txt  quadratic_solver.cpp  quadratic_solver.h
homework1/tests/: CMakeLists.txt  quadratic_solver_test.cpp
